--- a/index.html
+++ b/index.html
@@ -106,35 +106,19 @@
     </div>
 
 
-
-
-
-
-
-
-
 <!-- ---------------------     ABOUT   ------------------------ -->
 
     <div class="about">
 
       <div class="about__main">
+        <div class="about__main-primary">
+          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cum quibusdam fugiat eaque inventore eveniet placeat incidunt ipsum quidem ratione enim. Ut, ducimus iure ad, sit alias quas nam, quisquam perferendis ratione culpa assumenda architecto asperiores cupiditate unde? Hic repudiandae unde, quam nesciunt saepe repellat!</p>
 
-        <div class="about__main-atv">
-          <h3 class="about__main-atv--title">Despre ATV</h3>
-          <p class="about__main-atv--item">An fabricatie</p>
-          <p class="about__main-atv--item">Capacitate cilindrica- 450cc</p>
-          <p class="about__main-atv--item">17 L</p>
         </div>
 
-        <div class="about__main-tractari">
-          <h3 class="about__main-tractari--title">
-            Despre platforma
-          </h3>
-          <p class="about__main-tractari--item">Platforma lungime ......</p>
-          <p class="about__main-tractari--item">Platforma capacitate ....</p>
-          <p class="about__main-tractari--item">Categorie necesara petru a tracta remorca ......</p>
+        <div class="about__main-secondary">
+          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cum quibusdam fugiat eaque inventore eveniet placeat incidunt ipsum quidem ratione enim. Ut, ducimus iure ad, sit alias quas nam, quisquam perferendis ratione culpa assumenda architecto asperiores cupiditate unde? Hic repudiandae unde, quam nesciunt saepe repellat!</p>
 
-          </p>
         </div>
       </div>
     </div>
