--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Inchirieri ATV</title>
+    <title>Inchirieri-ATV</title>
     <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-169883661-2">
 </script>
@@ -30,11 +30,12 @@
 
   gtag('config', 'UA-169883661-2');
 </script>
+
   </head>
 
-  <body class="container--home" id="top">
+  <body class="container--home " id="top" >
 
-    <div class="header ">
+    <div class="header" >
 
       <div class="header__logo">
         <div class="logo-container">
@@ -51,14 +52,14 @@
       <div class="header__contact">
         <div class="header__contact-main">
           <p class="header__contact-main--title">Contact</p>
-          <p class="header__contact-main--number">07946553342</p>
-          <p class="header__contact-main--email">calin.gherman93@gmail.com</p>
+          <p class="header__contact-main--number">0732058295</p>
+          <p class="header__contact-main--email">atvalbaiulia@gmail.com</p>
         </div>
 
         <div class="header__contact-secondary">
-          <a href="" class="header__contact-secondary--media"><img src="img/img-header-facebook.png" alt="" class="header__contact-secondary--icon"></a>
+          <a href="https://www.facebook.com/Inchiriere-ATV-Alba-Iulia-108862078235274" target="_blank" class="header__contact-secondary--media"><img src="img/img-header-facebook.png" alt="" class="header__contact-secondary--icon"></a>
           <a href="" class="header__contact-secondary--media"><img src="img/img-header-tiktok.png" alt="" class="header__contact-secondary--icon"></a>
-          <a href="" class="header__contact-secondary--media"><img src="img/img-header-twitter.png" alt="" class="header__contact-secondary--icon"></a>
+          <a href="https://instagram.com/inchirieriatvalbaiulia?utm_medium=copy_link" target="_blank" class="header__contact-secondary--media"><img src="img/img-header-instagram.png" alt="" class="header__contact-secondary--icon"></a>
 
         </div>
       </div>
@@ -66,7 +67,7 @@
     </div>
 
     <div class="info">
-      <h2 class="info__header">Have a day off and enjoy doing what you love</h2>
+      <h2 class="info__header">Incearca o experienta noua</h2>
 
       <!-- ------------------  Card 1 ------------------------ -->
       <div class="info__card info__card-1">
@@ -76,8 +77,8 @@
           <span class="info__card-span--2">Preturi</span>
         </h3>
         <h4 class="info__card-1--weekend">Weekends</h4>
-        <h4 class="info__card-1--price">130lei/hr</h4>
-        <h4 class="info__card-1--hallDay">Pret pe zi 600lei</h4>
+        <h4 class="info__card-1--price">150lei/hr</h4>
+        <h4 class="info__card-1--hallDay">Pret pe zi 700 RON</h4>
       </div>
 
       <!-- ------------------  Card 2 ------------------------ -->
@@ -89,8 +90,8 @@
           <span class="info__card-span--4">Preturi</span>
         </h3>
         <h4 class="info__card-2--weekday">In timpul saptamanii</h4>
-        <h4 class="info__card-2--price">120lei/hr</h4>
-        <h4 class="info__card-2--hallDay">-10% la pretul pe zi</h4>
+        <h4 class="info__card-2--price">130lei/hr</h4>
+        <h4 class="info__card-2--hallDay">Pret pe zi 600 RON</h4>
       </div>
 
       <!-- ------------------  Card 3 ------------------------ -->
@@ -102,9 +103,9 @@
         </h3>
         <h4 class="info__card-3--weekday">15% Off</h4>
         <h4 class="info__card-3--price">
-          De ziua ta primesti 15% off la toate preturile din partea noastra!!!
+          De ziua ta primesti 15% reducere la toate preturile din partea noastra!!!
         </h4>
-        <a class="info__card-3--button" href="#oferta">Afla despre oferta</a>
+        <a class="info__card-3--button" href="">Afla despre oferta</a>
       </div>
     </div>
 
@@ -112,25 +113,26 @@
 <!--   ---------------    SECOND TITLE   ------------ -->
 
     <div class="second__title">
-      <h3>Despre noi</h3>
+      <h3>La ce te poti astepta</h3>
     </div>
 
 
 <!-- ---------------------     ABOUT   ------------------------ -->
 
-    <div class="about">
+    <div class="about section">
+      <!-- <iframe class="index__videos"  src="img/video2.mp4">
+      </iframe>
+      <iframe class="index__videos"  src="img/video1.mp4">
+      </iframe> -->
+      <video src="img/video2.mp4" data-video="no-play" id="video1" class="index__videos"></video>
+      <video src="img/video1.mp4" data-video="no-play"  id="video2" class="index__videos"></video>
 
-      <div class="about__main">
-        <div class="about__main-primary">
-          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cum quibusdam fugiat eaque inventore eveniet placeat incidunt ipsum quidem ratione enim. Ut, ducimus iure ad, sit alias quas nam, quisquam perferendis ratione culpa assumenda architecto asperiores cupiditate unde? Hic repudiandae unde, quam nesciunt saepe repellat!</p>
-
-        </div>
-
-        <div class="about__main-secondary">
-          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cum quibusdam fugiat eaque inventore eveniet placeat incidunt ipsum quidem ratione enim. Ut, ducimus iure ad, sit alias quas nam, quisquam perferendis ratione culpa assumenda architecto asperiores cupiditate unde? Hic repudiandae unde, quam nesciunt saepe repellat!</p>
-
-        </div>
-      </div>
+      <!-- <video  class="index__video">
+        <source src="img/video2.mp4" type="video/mp4">
+      </video>
+      <video  class="index__video">
+        <source src="img/video1.mp4" type="video/mp4">
+      </video> -->
     </div>
 
 
@@ -139,7 +141,7 @@
 
 
 
-    <div class="oferta" id="oferta">
+    <div class="oferta section" id="oferta">
 
 <!--     ------------   OFER MAIN  ---------- -->
 
@@ -158,7 +160,8 @@
           </h3>
 
           <p class="oferta__secondary-weekdays--text">
-            In timpul saptamanii aveti reducere la servicile de inchirieri ATV de pana la 10% daca doriti sa le inchiriati pentru o zi intreaga, sau daca doriti sa le inchiriati pe ora, pretul va fi de 120 RON pe ora.
+            Daca doriti sa inchiriati un ATV in timpul saptamanii, pretul va fi de 600 RON pe o zi intreaga, iar daca doriti sa inchiriati pe doua sau mai multe ore, pretul va fi de 130 RON pe ora.
+      
           </p>
       
 
@@ -181,8 +184,9 @@
           </p>
 
           <p class="oferta__secondary-birthday--text">
-            Pentru mai multe detalii va rugam sa ne contactati direct la numarul de telefon: 07946553342 sau sa ne scrieti la adressa de email: calin.gherman93@gmail.com iar noi o sa va raspundem la intrebari cu placere in cel mai scurt timp.
+            Pentru mai multe detalii va rugam sa ne contactati direct la numarul de telefon: 0732 058 295 sau sa ne scrieti la adressa de email: atvalbaiulia@gmail.com iar noi o sa va raspundem la intrebari cu placere in cel mai scurt timp.
            </p>
+
 
         </div>
 
@@ -198,7 +202,7 @@
 
     <!-- ---------------     PICTURES ---------------------------- -->
 
-    <div class="pictures">
+    <div class="pictures section">
 
       <figure class="pictures__item pictures__item--1"><img src="img/img-pictures-1.jpeg" alt="pictures image 1" class="pictures__img"></figure>
 
@@ -231,7 +235,7 @@
     </div>
 
     <!--     ---------------------   FOOTER   -------------- -->
-    <footer class="footer">
+    <footer class="footer section" id="apasa">
       <div class="footer__contact">
 
         <div class="footer__contact-title">Contact</div>
@@ -239,13 +243,13 @@
         <div class="footer__contact-us">
           <div class="footer__contact-us--telefon">
             <p class="addresa">Adresa: Strada Mircea Eliane 16 Alba Iulia</p>
-            <p class="adresa">Telefon: 07946553342</p>
-            <p class="adresa">email: calin.gherman93@gmail.com</p>
+            <p class="adresa">Telefon: 0732058295</p>
+            <p class="adresa">email: atvalbaiulia@gmail.com</p>
           </div>
           <div class="footer__contact-us--media">
-            <a href="" class="header__contact-secondary--media"><img src="img/img-header-facebook.png" alt="" class="header__contact-secondary--icon"></a>
+            <a href="https://www.facebook.com/Inchiriere-ATV-Alba-Iulia-108862078235274" target="_blank" class="header__contact-secondary--media"><img src="img/img-header-facebook.png" alt="" class="header__contact-secondary--icon"></a>
             <a href="" class="header__contact-secondary--media"><img src="img/img-header-tiktok.png" alt="" class="header__contact-secondary--icon"></a>
-            <a href="" class="header__contact-secondary--media"><img src="img/img-header-twitter.png" alt="" class="header__contact-secondary--icon"></a>      
+            <a href="https://instagram.com/inchirieriatvalbaiulia?utm_medium=copy_link" target="_blank" class="header__contact-secondary--media"><img src="img/img-header-instagram.png" alt="" class="header__contact-secondary--icon"></a>      
           </div>
         </div>
       </div>
@@ -255,6 +259,10 @@
       <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2767.6784499539162!2d23.550874915637806!3d46.07745240033398!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x474ea7d5b6ba4883%3A0xf43abc8384995a97!2sStrada%20Mircea%20Eliade%2C%20Alba%20Iulia%2C%20Romania!5e0!3m2!1sen!2suk!4v1637424308509!5m2!1sen!2suk" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
       </div>
     </footer>
-    <a href="#top" class="topButton">Top</a>
+    <a href=""  class="topButton">Top</a>
+   
   </body>
+  <script src="index.js"></script>
+
 </html>
+
